-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.1.0 Beta 1
-
None
-
b735ef88a20e8a43e678b7b5a5dbf17741bd8c24
qdoc reports over 100 missing images, mostly on widgets examples:
qtbase/examples/widgets/doc/src/addressbook.qdoc:28: warning: Missing image: signals-n-slots-aw-nat.png qtbase/examples/widgets/doc/src/affine.qdoc:28: warning: Missing image: affine-demo.png qtbase/examples/widgets/doc/src/analogclock.qdoc:28: warning: Missing image: analogclock-example.png qtbase/examples/widgets/doc/src/animatedtiles.qdoc:28: warning: Missing image: animatedtiles-example.png qtbase/examples/widgets/doc/src/appchooser.qdoc:28: warning: Missing image: appchooser-example.png qtbase/examples/widgets/doc/src/application.qdoc:28: warning: Missing image: application.png qtbase/examples/widgets/doc/src/application.qdoc:28: warning: Missing image: application-menus.png qtbase/examples/widgets/doc/src/applicationicon.qdoc:28: warning: Missing image: appicon_screenshot.png qtbase/examples/widgets/doc/src/applicationicon.qdoc:28: warning: Missing image: appicon_packagecontents.png qtbase/examples/widgets/doc/src/basicdrawing.qdoc:28: warning: Missing image: basicdrawing-example.png qtbase/examples/widgets/doc/src/basicsortfiltermodel.qdoc:28: warning: Missing image: basicsortfiltermodel-example.png qtbase/examples/widgets/doc/src/blurpicker.qdoc:28: warning: Missing image: blurpickereffect-example.png qtbase/examples/widgets/doc/src/borderlayout.qdoc:28: warning: Missing image: borderlayout-example.png qtbase/examples/widgets/doc/src/boxes.qdoc:28: warning: Missing image: boxes-demo.png qtbase/examples/widgets/doc/src/calculator.qdoc:28: warning: Missing image: calculator-example.png qtbase/examples/widgets/doc/src/calculator.qdoc:28: warning: Missing image: calculator-ugly.png qtbase/examples/widgets/doc/src/calendarwidget.qdoc:28: warning: Missing image: calendarwidgetexample.png qtbase/examples/widgets/doc/src/charactermap.qdoc:28: warning: Missing image: charactermap-example.png qtbase/examples/widgets/doc/src/chart.qdoc:28: warning: Missing image: chart-example.png qtbase/examples/widgets/doc/src/chip.qdoc:28: warning: Missing image: chip-demo.png qtbase/examples/widgets/doc/src/classwizard.qdoc:28: warning: Missing image: classwizard.png qtbase/examples/widgets/doc/src/classwizard.qdoc:28: warning: Missing image: classwizard-flow.png qtbase/examples/widgets/doc/src/codeeditor.qdoc:28: warning: Missing image: codeeditor-example.png qtbase/examples/widgets/doc/src/coloreditorfactory.qdoc:28: warning: Missing image: coloreditorfactoryimage.png qtbase/examples/widgets/doc/src/combowidgetmapper.qdoc:28: warning: Missing image: combowidgetmapper-example.png qtbase/examples/widgets/doc/src/combowidgetmapper.qdoc:28: warning: Missing image: widgetmapper-combo-mapping.png qtbase/examples/widgets/doc/src/composition.qdoc:28: warning: Missing image: composition-demo.png qtbase/examples/widgets/doc/src/concentriccircles.qdoc:28: warning: Missing image: concentriccircles-example.png qtbase/examples/widgets/doc/src/configdialog.qdoc:28: warning: Missing image: configdialog-example.png qtbase/examples/widgets/doc/src/customsortfiltermodel.qdoc:28: warning: Missing image: customsortfiltermodel-example.png qtbase/examples/widgets/doc/src/deform.qdoc:28: warning: Missing image: deform-demo.png qtbase/examples/widgets/doc/src/diagramscene.qdoc:28: warning: Missing image: diagramscene.png qtbase/examples/widgets/doc/src/digitalclock.qdoc:28: warning: Missing image: digitalclock-example.png qtbase/examples/widgets/doc/src/dirview.qdoc:28: warning: Missing image: dirview-example.png qtbase/examples/widgets/doc/src/dockwidgets.qdoc:28: warning: Missing image: dockwidgets-example.png qtbase/examples/widgets/doc/src/dragdroprobot.qdoc:28: warning: Missing image: dragdroprobot-example.png qtbase/examples/widgets/doc/src/draggableicons.qdoc:28: warning: Missing image: draggableicons-example.png qtbase/examples/widgets/doc/src/draggabletext.qdoc:28: warning: Missing image: draggabletext-example.png qtbase/examples/widgets/doc/src/easing.qdoc:28: warning: Missing image: easing-example.png qtbase/examples/widgets/doc/src/elasticnodes.qdoc:28: warning: Missing image: elasticnodes-example.png qtbase/examples/widgets/doc/src/elidedlabel.qdoc:28: warning: Missing image: elidedlabel-example.png qtbase/examples/widgets/doc/src/embeddeddialogs.qdoc:28: warning: Missing image: embeddeddialogs-demo.png qtbase/examples/widgets/doc/src/extension.qdoc:28: warning: Missing image: extension-example.png qtbase/examples/widgets/doc/src/extension.qdoc:28: warning: Missing image: extension_more.png qtbase/examples/widgets/doc/src/fetchmore.qdoc:28: warning: Missing image: fetchmore-example.png qtbase/examples/widgets/doc/src/findfiles.qdoc:28: warning: Missing image: findfiles-example.png qtbase/examples/widgets/doc/src/findfiles.qdoc:28: warning: Missing image: findfiles_progress_dialog.png qtbase/examples/widgets/doc/src/flowlayout.qdoc:28: warning: Missing image: flowlayout-example.png qtbase/examples/widgets/doc/src/fontsampler.qdoc:28: warning: Missing image: fontsampler-example.png qtbase/examples/widgets/doc/src/frozencolumn.qdoc:28: warning: Missing image: frozencolumn-example.png qtbase/examples/widgets/doc/src/frozencolumn.qdoc:28: warning: Missing image: frozencolumn-tableview.png qtbase/examples/widgets/doc/src/gradients.qdoc:28: warning: Missing image: gradients-demo.png qtbase/examples/widgets/doc/src/groupbox.qdoc:28: warning: Missing image: groupbox-example.png qtbase/examples/widgets/doc/src/i18n.qdoc:28: warning: Missing image: i18n-example.png qtbase/examples/widgets/doc/src/icons.qdoc:28: warning: Missing image: icons-example.png qtbase/examples/widgets/doc/src/icons.qdoc:28: warning: Missing image: icons-view-menu.png qtbase/examples/widgets/doc/src/icons.qdoc:28: warning: Missing image: icons_find_normal.png qtbase/examples/widgets/doc/src/icons.qdoc:28: warning: Missing image: icons_find_normal_disabled.png qtbase/examples/widgets/doc/src/icons.qdoc:28: warning: Missing image: icons_monkey_active.png qtbase/examples/widgets/doc/src/icons.qdoc:28: warning: Missing image: icons_preview_area.png qtbase/examples/widgets/doc/src/icons.qdoc:28: warning: Missing image: icons-example.png qtbase/examples/widgets/doc/src/icons.qdoc:28: warning: Missing image: icons_images_groupbox.png qtbase/examples/widgets/doc/src/icons.qdoc:28: warning: Missing image: icons_size_groupbox.png qtbase/examples/widgets/doc/src/icons.qdoc:28: warning: Missing image: icons_size_spinbox.png qtbase/examples/widgets/doc/src/imagecomposition.qdoc:28: warning: Missing image: imagecomposition-example.png qtbase/examples/widgets/doc/src/imageviewer.qdoc:28: warning: Missing image: imageviewer-example.png qtbase/examples/widgets/doc/src/interview.qdoc:28: warning: Missing image: interview-demo.png qtbase/examples/widgets/doc/src/licensewizard.qdoc:28: warning: Missing image: licensewizard-example.png qtbase/examples/widgets/doc/src/lighting.qdoc:28: warning: Missing image: lightingeffect-example.png qtbase/examples/widgets/doc/src/lineedits.qdoc:28: warning: Missing image: lineedits-example.png qtbase/examples/widgets/doc/src/mdi.qdoc:28: warning: Missing image: mdi-example.png qtbase/examples/widgets/doc/src/menus.qdoc:28: warning: Missing image: menus-example.png qtbase/examples/widgets/doc/src/moveblocks.qdoc:28: warning: Missing image: moveblocks-example.png qtbase/examples/widgets/doc/src/moveblocks.qdoc:28: warning: Missing image: move-blocks-chart.png qtbase/examples/widgets/doc/src/movie.qdoc:28: warning: Missing image: movie-example.png qtbase/examples/widgets/doc/src/orderform.qdoc:28: warning: Missing image: orderform-example-detailsdialog.png qtbase/examples/widgets/doc/src/padnavigator.qdoc:28: warning: Missing image: padnavigator-example.png qtbase/examples/widgets/doc/src/painterpaths.qdoc:28: warning: Missing image: painterpaths-example.png qtbase/examples/widgets/doc/src/pathstroke.qdoc:28: warning: Missing image: pathstroke-demo.png qtbase/examples/widgets/doc/src/pixelator.qdoc:28: warning: Missing image: pixelator-example.png qtbase/examples/widgets/doc/src/recentfiles.qdoc:28: warning: Missing image: recentfiles-example.png qtbase/examples/widgets/doc/src/rogue.qdoc:28: warning: Missing image: rogue-example.png qtbase/examples/widgets/doc/src/rogue.qdoc:28: warning: Missing image: rogue-statechart.png qtbase/examples/widgets/doc/src/screenshot.qdoc:28: warning: Missing image: screenshot-example.png qtbase/examples/widgets/doc/src/scribble.qdoc:28: warning: Missing image: scribble-example.png qtbase/examples/widgets/doc/src/sdi.qdoc:28: warning: Missing image: sdi-example.png qtbase/examples/widgets/doc/src/shapedclock.qdoc:28: warning: Missing image: shapedclock-example.png qtbase/examples/widgets/doc/src/shapedclock.qdoc:28: warning: Missing image: shapedclock-dragging.png qtbase/examples/widgets/doc/src/simpledommodel.qdoc:28: warning: Missing image: simpledommodel-example.png qtbase/examples/widgets/doc/src/simpletreemodel.qdoc:28: warning: Missing image: simpletreemodel-example.png qtbase/examples/widgets/doc/src/simplewidgetmapper.qdoc:28: warning: Missing image: simplewidgetmapper-example.png qtbase/examples/widgets/doc/src/simplewidgetmapper.qdoc:28: warning: Missing image: widgetmapper-simple-mapping.png qtbase/examples/widgets/doc/src/sliders.qdoc:28: warning: Missing image: sliders-example.png qtbase/examples/widgets/doc/src/spinboxes.qdoc:28: warning: Missing image: spinboxes-example.png qtbase/examples/widgets/doc/src/spreadsheet.qdoc:28: warning: Missing image: spreadsheet-demo.png qtbase/examples/widgets/doc/src/standarddialogs.qdoc:28: warning: Missing image: standarddialogs-example.png qtbase/examples/widgets/doc/src/states.qdoc:28: warning: Missing image: states-example.png qtbase/examples/widgets/doc/src/stickman.qdoc:28: warning: Missing image: stickman-example.png qtbase/examples/widgets/doc/src/stickman.qdoc:28: warning: Missing image: stickman-example1.png qtbase/examples/widgets/doc/src/stickman.qdoc:28: warning: Missing image: stickman-example2.png qtbase/examples/widgets/doc/src/stickman.qdoc:28: warning: Missing image: stickman-example3.png qtbase/examples/widgets/doc/src/styles.qdoc:28: warning: Missing image: styles-enabledwood.png qtbase/examples/widgets/doc/src/styles.qdoc:28: warning: Missing image: widgets/styles/images/woodbackground.png qtbase/examples/widgets/doc/src/styles.qdoc:28: warning: Missing image: widgets/styles/images/woodbutton.png qtbase/examples/widgets/doc/src/styles.qdoc:28: warning: Missing image: styles-disabledwood.png qtbase/examples/widgets/doc/src/styles.qdoc:28: warning: Missing image: styles-woodbuttons.png qtbase/examples/widgets/doc/src/styles.qdoc:28: warning: Missing image: styles-aliasing.png qtbase/examples/widgets/doc/src/styles.qdoc:28: warning: Missing image: styles-3d.png qtbase/examples/widgets/doc/src/sub-attaq.qdoc:28: warning: Missing image: sub-attaq-demo.png qtbase/examples/widgets/doc/src/syntaxhighlighter.qdoc:28: warning: Missing image: syntaxhighlighter-example.png qtbase/examples/widgets/doc/src/tabdialog.qdoc:28: warning: Missing image: tabdialog-example.png qtbase/examples/widgets/doc/src/tablet.qdoc:28: warning: Missing image: tabletexample.png qtbase/examples/widgets/doc/src/tetrix.qdoc:28: warning: Missing image: tetrix-example.png qtbase/examples/widgets/doc/src/tooltips.qdoc:28: warning: Missing image: tooltips-example.png qtbase/examples/widgets/doc/src/trafficlight.qdoc:28: warning: Missing image: trafficlight-example.png qtbase/examples/widgets/doc/src/transformations.qdoc:28: warning: Missing image: transformations-example.png qtbase/examples/widgets/doc/src/trivialwizard.qdoc:28: warning: Missing image: trivialwizard-example-flow.png qtbase/examples/widgets/doc/src/trivialwizard.qdoc:28: warning: Missing image: trivialwizard-example-introduction.png qtbase/examples/widgets/doc/src/trivialwizard.qdoc:28: warning: Missing image: trivialwizard-example-registration.png qtbase/examples/widgets/doc/src/trivialwizard.qdoc:28: warning: Missing image: trivialwizard-example-conclusion.png qtbase/examples/widgets/doc/src/wiggly.qdoc:28: warning: Missing image: wiggly-example.png qtbase/examples/widgets/doc/src/windowflags.qdoc:28: warning: Missing image: windowflags-example.png qtbase/examples/widgets/doc/src/windowflags.qdoc:28: warning: Missing image: windowflags_controllerwindow.png qtbase/examples/widgets/doc/src/windowflags.qdoc:28: warning: Missing image: windowflags_previewwindow.png qtdeclarative/src/imports/xmllistmodel/qqmlxmllistmodel.cpp:612: warning: Missing image: qml-xmllistmodel-example.png qtmultimedia/examples/multimedia/audioengine/doc/src/audioengine.qdoc:28: warning: Missing image: audioengine.png
| For Gerrit Dashboard: QTBUG-31137 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 56083,2 | Doc: Remove widgets examples from Qt Print Support documentation | stable | qt/qtbase | Status: MERGED | +2 | 0 |